--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+log = "0.4.22"
+parking_lot = "0.12.3"
+lazy_static = "1.5.0"
+chrono = "0.4.39"
