--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,3 +8,12 @@ log = "0.4.22"
 parking_lot = "0.12.3"
 lazy_static = "1.5.0"
 chrono = "0.4.39"
+pgp = { version = "0.14.2", optional = true }
+
+[features]
+git = []
+gpg = ["pgp"]
+default = []
+
+[dev-dependencies]
+serial_test = "3.2.0"
