--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,6 +9,8 @@ parking_lot = "0.12.3"
 lazy_static = "1.5.0"
 chrono = "0.4.39"
 pgp = { version = "0.14.2", optional = true }
+zeroize = "1.8.1"
+secrecy = "0.10.3"
 
 [features]
 git = []
