--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pass-store-rs-core = { path = "core" }
+
+[profile.release]
+opt-level = "z"
+lto = "fat"
