--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,21 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.39"
+lazy_static = "1.5.0"
 log = "0.4.22"
 parking_lot = "0.12.3"
-lazy_static = "1.5.0"
-chrono = "0.4.39"
 pgp = { version = "0.14.2", optional = true }
-zeroize = "1.8.1"
-secrecy = "0.10.3"
-regex = "1.11.1"
 pretty_assertions = "1.4.1"
+rand = "0.8.5"
+regex = "1.11.1"
+secrecy = "0.10.3"
 serial_test = "3.2.0"
+zeroize = "1.8.1"
 
 [features]
+default = []
 git = []
 gpg = ["pgp"]
-default = []
 
 [dev-dependencies]
 
