--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
+colored = "2.2.0"
 lazy_static = "1.5.0"
 log = "0.4.22"
 parking_lot = "0.12.3"
