--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+fs_extra = "1.3.0"
 pass-store-rs-core = { path = "core" }
 
 [profile.release]
