--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.39"
 colored = "2.2.0"
+fs_extra = "1.3.0"
 lazy_static = "1.5.0"
 log = "0.4.22"
+os_pipe = "1.2.1"
 parking_lot = "0.12.3"
 pgp = { version = "0.14.2", optional = true }
 pretty_assertions = "1.4.1"
