--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -21,6 +21,7 @@ zeroize = "1.8.1"
 os_pipe = "1.2.1"
 serial_test = "3.2.0"
 pretty_assertions = "1.4.1"
+bumpalo = { version = "3.17.0", features = ["collections"] }
 
 
 [features]
