fix(path protection): use clean-path insead of std::path::absolute

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,11 +17,13 @@ regex = "1.11.1"
 secrecy = "0.10.3"
 tempfile = "3.15.0"
 zeroize = "1.8.1"
-
+bumpalo = { version = "3.17.0", features = ["collections"] }
+walkdir = "2.5.0"
 os_pipe = "1.2.1"
+
 serial_test = "3.2.0"
 pretty_assertions = "1.4.1"
-bumpalo = { version = "3.17.0", features = ["collections"] }
+clean-path = "0.2.1"
 
 
 [features]
