--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
+
+    - name: Setup Rust toolchain
+      uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        toolchain: nightly
+        override: true
+        components: clippy,rustfmt
+    - name: Format check
+      run: cargo fmt --all -- --check
+      working-directory: ./core
+      
+    - name: Build core
       run: cargo build --verbose
-    - name: Run tests
+      working-directory: ./core
+
+    - name: Run core tests
       run: cargo test --verbose
+      working-directory: ./core
