--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -27,6 +27,7 @@ clean-path = "0.2.1"
 config = "0.15.8"
 toml = "0.8.20"
 serde = { version = "1.0.217", features = ["derive"] }
+dirs = "6.0.0"
 
 
 [features]
