--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
-name = "pass-store-rs-core"
+name = "pars-core"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
-colored = "2.2.0"
+colored = "3.0.0"
 fs_extra = "1.3.0"
 lazy_static = "1.5.0"
 log = "0.4.22"
 parking_lot = "0.12.3"
 passwords = "3.1.16"
-pgp = { version = "0.14.2", optional = true }
-rand = "0.8.5"
+pgp = { version = "0.15", optional = true }
+rand = "0.9.0"
 regex = "1.11.1"
 secrecy = "0.10.3"
 tempfile = "3.15.0"
