--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.5.28", features = ["derive"] }
 log = "0.4.26"
 pars-core = { path = "../core" }
+secrecy = "0.10.3"
 
 
 [[bin]]
