--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.97"
 clap = { version = "4.5.28", features = ["derive"] }
 log = "0.4.26"
 pars-core = { path = "../core" }
