--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.28", features = ["derive"] }
+fast_qr = "0.12.7"
 log = "0.4.26"
 pars-core = { path = "../core" }
 secrecy = "0.10.3"
