fix(windows clipboard): avoid escape characters

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -25,6 +25,9 @@ dirs = "6.0.0"
 anyhow = "1.0.97"
 toml = "0.8.20"
 
+[target.'cfg(windows)'.dependencies]
+base64 = "0.22.1"
+
 
 [features]
 default = []
