--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -26,7 +26,7 @@ anyhow = "1.0.97"
 toml = "0.8.20"
 
 [target.'cfg(windows)'.dependencies]
-base64 = "0.22.1"
+unicode-segmentation = "1.12.0"
 
 
 [features]
