--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -2,13 +2,17 @@
 name = "pars-cli"
 version = "0.1.1"
 edition = "2021"
+license = "GPL-3.0-or-later"
+description = "A zx2c4-pass compatible passwords manager with CLI"
+authors = ["Vollate <uint44t@gmail.com>"]
+
 
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.28", features = ["derive"] }
 fast_qr = "0.13.0"
 log = "0.4.26"
-pars-core = { path = "../core" }
+pars-core = { version = "0.2.0" }
 secrecy = "0.10.3"
 
 
