--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "pars-core"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 license = "GPL-3.0-or-later"
 description = "Pars(a zx2c4-pass compatible passwords manager) core library"
 authors = ["Vollate <uint44t@gmail.com>"]
+repository = "https://github.com/vollate/pass-store-rs"
 
 
 [dependencies]
@@ -29,6 +30,7 @@ dirs = "6.0.0"
 anyhow = "1.0.97"
 toml = "0.8.20"
 unicode-segmentation = "1.12.0"
+directories = "6.0.0"
 
 [features]
 default = []
