--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pars-cli"
-version = "0.1.3"
+version = "0.1.5"
 edition = "2021"
 license = "GPL-3.0-or-later"
 description = "A zx2c4-pass compatible passwords manager"
@@ -13,7 +13,7 @@ anyhow = "1.0.97"
 clap = { version = "4.5.28", features = ["derive"] }
 fast_qr = "0.13.0"
 log = "0.4.26"
-pars-core = { version = "0.2.2" }
+pars-core = { version = "^0.2" }
 secrecy = "0.10.3"
 
 [[bin]]
